@@ -87,11 +87,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.0.0</version>
-                <configuration>
-                    <jvmArguments>
-                        --add-opens=java.base/java.util=ALL-UNNAMED
-                    </jvmArguments>
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
